new register first stage
