# apps/main/src/spec/openapi.yaml
@@ -54,7 +54,134 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  
+
+  /attic/{at}:
+    get:
+      summary: Get public connection information
+      operationId: attic
+      x-eov-operation-handler: api
+      parameters:
+        - name: at
+          in: path
+          description: Start of users name
+          required: true
+          schema:
+            type: string
+            minLength: 3
+            maxLength: 35
+      responses:
+        '200':
+          description: Attic content
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Attic"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /identity/{at}:
+    get:
+      summary: Login
+      operationId: login
+      x-eov-operation-handler: api
+      parameters:
+        - in: header
+          name: X-msm-Pass
+          required: false
+          description: Password hash
+          schema:
+            type: string
+            format: byte
+            minLength: 140
+            maxLength: 140
+        - name: at
+          in: path
+          description: Start of users name
+          required: true
+          schema:
+            type: string
+            minLength: 3
+            maxLength: 35
+      responses:
+        '200':
+          description: Encrypted Bearer token
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Identity"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /user/{at}:
+    get:
+      summary: Get one user informations
+      operationId: getOneUser
+      x-eov-operation-handler: api
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: at
+          in: path
+          description: Username
+          required: true
+          schema:
+            type: string
+            minLength: 3
+            maxLength: 35
+      responses:
+        '200':
+          description: One user
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    delete:
+      summary: Delete every reference to an account
+      description: Incinerate an account entirely
+      operationId: incinerate
+      x-eov-operation-handler: api
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: header
+          name: X-msm-Sig
+          required: true
+          description: SK signature of the body
+          schema:
+            $ref: "#/components/schemas/SignatureHeader"
+        - name: at
+          in: path
+          description: Username
+          required: true
+          schema:
+            type: string
+            minLength: 3
+            maxLength: 35
+
+      responses:
+        '200':
+          description: The account doesn't exists anymore
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /search:
     get:
       summary: Get users' list
@@ -144,105 +271,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /identity/{at}:
-    get:
-      summary: Login
-      operationId: login
-      x-eov-operation-handler: api
-      parameters:
-        - in: header
-          name: X-msm-Pass
-          required: true
-          description: Password hash
-          schema:
-            type: string
-            format: byte
-            minLength: 44
-            maxLength: 44
-        - name: at
-          in: path
-          description: Start of users name
-          required: true
-          schema:
-            type: string
-            minLength: 3
-            maxLength: 35
-      responses:
-        '200':
-          description: Encrypted Bearer token
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Identity"
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-
-  /user/{at}:
-    get:
-      summary: Get one user informations
-      operationId: getOneUser
-      x-eov-operation-handler: api
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: at
-          in: path
-          description: Username
-          required: true
-          schema:
-            type: string
-            minLength: 3
-            maxLength: 35
-      responses:
-        '200':
-          description: One user
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-    delete:
-      summary: Delete every reference to an account
-      description: Incinerate an account entirely
-      operationId: incinerate
-      x-eov-operation-handler: api
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: header
-          name: X-msm-Sig
-          required: true
-          description: SK signature of the body
-          schema:
-            $ref: "#/components/schemas/SignatureHeader"
-        - name: at
-          in: path
-          description: Username
-          required: true
-          schema:
-            type: string
-            minLength: 3
-            maxLength: 35
-
-      responses:
-        '200':
-          description: The account doesn't exists anymore
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-
   /contacts:
     put:
       summary: Save the contact list
@@ -290,7 +318,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Vault'
+              type: object
+              required:
+                - vault
+                - attic
+              properties:
+                vault:
+                  $ref: '#/components/schemas/Vault'
+                attic:
+                  $ref: '#/components/schemas/Attic'
       responses:
         '200':
           description: Key saved
@@ -793,8 +829,6 @@ components:
         - key
         - signature
         - hash
-        - pass
-        - kill
       properties:
         at:
           type: string
@@ -813,16 +847,10 @@ components:
           format: byte
           minLength: 172
           maxLength: 172
-        pass:
-          type: string
-          format: byte
-          minLength: 172
-          maxLength: 172
-        kill:
-          type: string
-          format: byte
-          minLength: 172
-          maxLength: 172
+        vault:
+          $ref: '#/components/schemas/Vault'
+        attic:
+          $ref: '#/components/schemas/Attic'
     Challenge:
       type: object
       required:
@@ -930,12 +958,27 @@ components:
     Vault:
       type: object
       required:
-        - vault
+        - token
+        - iv
+        - salt
         - pass
         - kill
       properties:
-        vault:
-          $ref: "#/components/schemas/VaultItem"
+        token:
+          type: string
+          format: byte
+          minLength: 5552
+          maxLength: 5552
+        iv:
+          type: string
+          format: byte
+          minLength: 24
+          maxLength: 24
+        salt:
+          type: string
+          format: byte
+          minLength: 88
+          maxLength: 88
         pass:
           type: string
           format: byte
@@ -946,22 +989,50 @@ components:
           format: byte
           minLength: 172
           maxLength: 172
-    VaultItem:
+    Attic:
       type: object
       required:
-        - token
         - iv
+        - salt
+        - proof
       properties:
-        token:
-          type: string
-          format: byte
-          minLength: 5548
-          maxLength: 5556
         iv:
           type: string
           format: byte
           minLength: 24
           maxLength: 24
+        salt:
+          type: string
+          format: byte
+          minLength: 88
+          maxLength: 88
+        proof:
+          type: string
+          format: byte
+          minLength: 88
+          maxLength: 88
+    VaultItem:
+      type: object
+      required:
+        - token
+        - iv
+        - salt
+      properties:
+        token:
+          type: string
+          format: byte
+          minLength: 5552
+          maxLength: 5552
+        iv:
+          type: string
+          format: byte
+          minLength: 24
+          maxLength: 24
+        salt:
+          type: string
+          format: byte
+          minLength: 88
+          maxLength: 88
     Subcription:
       type: object
       required:
